[package]
name = "dmm_parser_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
diff = "0.1"
itertools = "0.10.5"
linked-hash-map = "0.5.6"
grid = "0.10"
rand = "^0.8"
dmmtools = { git = "https://github.com/DreamySkrell/SpacemanDMM", rev = "058c1e0d253ae78443e8911ffc9249346872b48d", package = "dmm-tools" }
