[package]
name = "dmm_parser_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
diff = "0.1"
itertools = "0.10.5"
linked-hash-map = "0.5.6"
fxhash = "0.2.1"
grid = "0.10"
rand = "^0.8"
dmmtools = { git = "https://github.com/DreamySkrell/SpacemanDMM", rev = "79bb5ba497cfec7f0e8dbd6992bae20002d11d0e", package = "dmm-tools" }
